@@ -46,7 +46,6 @@ import java.util.Set;
 import java.util.concurrent.ConcurrentLinkedQueue;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.locks.ReentrantLock;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.emptyList;
 
@@ -110,9 +109,8 @@ public abstract class AbstractTbQueueConsumerTemplate<R, T extends TbQueueMsg> i
                 partitions = subscribeQueue.poll();
             }
             if (!subscribed) {
-                List<String> topicNames = getFullTopicNames();
-                log.info("Subscribing to topics {}", topicNames);
-                doSubscribe(topicNames);
+                log.info("Subscribing to {}", partitions);
+                doSubscribe(partitions);
                 subscribed = true;
             }
             records = partitions.isEmpty() ? emptyList() : doPoll(durationInMillis);
@@ -135,9 +133,9 @@ public abstract class AbstractTbQueueConsumerTemplate<R, T extends TbQueueMsg> i
                 if (record != null) {
                     result.add(decode(record));
                 }
-            } catch (IOException e) {
-                log.error("Failed decode record: [{}]", record);
-                throw new RuntimeException("Failed to decode record: ", e);
+            } catch (Exception e) {
+                log.error("Failed to decode record {}", record, e);
+                throw new RuntimeException("Failed to decode record " + record, e);
             }
         });
         return result;
@@ -164,6 +162,9 @@ public abstract class AbstractTbQueueConsumerTemplate<R, T extends TbQueueMsg> i
     @Override
     public void commit() {
         if (consumerLock.isLocked()) {
+            if (stopped) {
+                return;
+            }
             log.error("commit. consumerLock is locked. will wait with no timeout. it looks like a race conditions or deadlock topic " + topic, new RuntimeException("stacktrace"));
         }
         consumerLock.lock();
@@ -181,7 +182,7 @@ public abstract class AbstractTbQueueConsumerTemplate<R, T extends TbQueueMsg> i
 
     @Override
     public void unsubscribe() {
-        log.info("Unsubscribing and stopping consumer for topics {}", getFullTopicNames());
+        log.info("Unsubscribing and stopping consumer for {}", partitions);
         stopped = true;
         consumerLock.lock();
         try {
@@ -202,7 +203,7 @@ public abstract class AbstractTbQueueConsumerTemplate<R, T extends TbQueueMsg> i
 
     abstract protected T decode(R record) throws IOException;
 
-    abstract protected void doSubscribe(List<String> topicNames);
+    abstract protected void doSubscribe(Set<TopicPartitionInfo> partitions);
 
     abstract protected void doCommit();
 
@@ -213,7 +214,9 @@ public abstract class AbstractTbQueueConsumerTemplate<R, T extends TbQueueMsg> i
         if (partitions == null) {
             return Collections.emptyList();
         }
-        return partitions.stream().map(TopicPartitionInfo::getFullTopicName).collect(Collectors.toList());
+        return partitions.stream()
+                .map(TopicPartitionInfo::getFullTopicName)
+                .toList();
     }
 
     protected boolean isLongPollingSupported() {
